--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ img {
 
 body {
   padding: 48px;
-  margin: 32px;
+  margin: 60px;
   box-shadow: 0px 0px 34px 16px rgba(0, 0, 0, 0.75);
 }
 
@@ -48,7 +48,7 @@ body {
 }
 
 .major {
-  font-size: 28px;
+  font-size: 32px;
   font-weight: 500;
   margin-bottom: 16px;
   color: rgb(0, 0, 123);
@@ -79,6 +79,7 @@ body {
 
 .description {
   margin-bottom: 24px;
+  font-size: 18px;
 }
 
 .article-title {
@@ -93,12 +94,15 @@ body {
 .experience-section {
   display: flex;
   gap: 100px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .experience-period {
   min-width: 120px;
   font-weight: 700;
+  font-size: 24px;
+  line-height: 0.7;
+  min-width: 200px;
 }
 
 .job-description {
@@ -117,7 +121,6 @@ body {
 .job-place {
   color: black;
   font-style: italic;
-  text-decoration: underline;
 }
 
 .job-description-list {
@@ -141,13 +144,13 @@ body {
 .skills-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
   justify-content: space-between;
+  padding: 0 144px;
 }
 
-.skills-list-item {
+/* .skills-list-item {
   min-width: 150px;
-}
+} */
 
 .skills-title {
   font-size: 24px;
